fix design on tablets using dynamic viewport units

--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -2,24 +2,23 @@
 ---
 
 html * {
-    font-size: 1.7vmin;
+    font-size: 1.7dvmin;
     color: #000;
     font-family: Arial;
 }
 
 body {
-    // background-color: #3b3f46;
     background-image: url("../img/background.png");
-    background-size: 100vw 100vh;
+    background-size: 100dvw 100dvh;
     background-repeat: no-repeat;
 }
 
 .overlay {
     position: fixed;
-    left: 0vw;
-    top: 0vh;
-    width: 100vw;
-    height: 100vh;
+    left: 0;
+    top: 0;
+    width: 100dvw;
+    height: 100dvh;
     display: none;
 
     &.active {
@@ -32,45 +31,45 @@ body {
     position: fixed;
 
     &.ram-options {
-        left: 2vw;
-        top: 2vh;
+        left: 2dvw;
+        top: 2dvh;
 
         input[type="range"] {
-            width: 7vw;
+            width: 7dvw;
         }
     }
 
     &.ram-control-options {
-        left: 12vw;
-        top: 2vh;
+        left: 12dvw;
+        top: 2dvh;
     }
 
     &.control-unit-toggle {
-        left: 40vw;
-        top: 2vh;
+        left: 40dvw;
+        top: 2dvh;
     }
 
     &.mc-options {
-        left: 50vw;
-        top: 2vh;
+        left: 50dvw;
+        top: 2dvh;
     }
 
     &.mc-record-panel {
-        left: 60vw;
-        top: 1.7vh;
+        left: 60dvw;
+        top: 1.7dvh;
 
         input {
-            margin-right: 0.2vw;
-            margin-bottom: 0.5vh;
+            margin-right: 0.2dvw;
+            margin-bottom: 0.5dvh;
             padding: 0;
-            width: 5vw;
+            width: 5dvw;
         }
     }
 
     &.settings-button {
         position: fixed;
-        left: 90vw;
-        top: 2.5vh;
+        left: 90dvw;
+        top: 2.5dvh;
 
         &:hover {
             cursor: pointer;
@@ -79,10 +78,8 @@ body {
     }
 
     .icon {
-        width: 4vmin;
-        height: 4vmin;
-        max-width: 100vw;
-        max-height: 100vh;
+        width: 4dvmin;
+        height: 4dvmin;
 
         &:hover {
             cursor: pointer;
@@ -98,58 +95,55 @@ body {
 // ----- manaual inputs -----
 .manual-input {
     position: fixed;
-    left: 5vw;
+    left: 5dvw;
 
     &#ab-manual-input {
-        top: 13vh;
-        width: 5vw;
-        height: 1.8vh;
+        top: 13dvh;
+        width: 5dvw;
     }
 
     &#ab-manual-button {
-        top: 15.5vh;
+        top: 15.5dvh;
     }
 
     &#db-manual-input {
-        top: 93vh;
-        width: 5vw;
-        height: 1.8vh;
+        top: 93dvh;
+        width: 5dvw;
     }
 
     &#db-manual-button {
-        top: 95.5vh;
+        top: 95.5dvh;
     }
 }
 
 // ----- field positions -----
 .field {
     position: fixed;
-    font-size: 3vmin;
+    font-size: 3dvmin;
     color: white;
+    transform: translate(-50%, -50%);
 
     &#ab-field {
-        left: 50vw;
-        top: 11vh;
+        left: 50dvw;
+        top: 13dvh;
     }
 
     &#db-field {
-        left: 50vw;
-        top: 90.8vh;
+        left: 50dvw;
+        top: 92.5dvh;
     }
 
     &#acc-field {
-        left: 91vw;
-        top: 46vh;
-        transform: translate(-50%, 0%);
+        left: 91dvw;
+        top: 48.5dvh;
     }
 
     &#ins-field {
-        left: 49.5vw;
-        top: 35vh;
-        transform: translate(-50%, 0%);
+        left: 49.5dvw;
+        top: 37dvh;
 
         span {
-            font-size: 3vmin;
+            font-size: inherit;
         }
 
         #ins-high {
@@ -162,20 +156,21 @@ body {
     }
 
     &#pc-field {
-        left: 66.5vw;
-        top: 35vh;
+        left: 67.8dvw;
+        top: 36.5dvh;
     }
 
     &#mc-field {
-        left: 45.5vw;
-        top: 52.5vh
+        left: 46.3dvw;
+        top: 54.3dvh;
     }
 }
 
 // ----- button positions -----
 .button {
     position: fixed;
-    min-width: 5vw;
+    min-width: 5dvw;
+    white-space: nowrap;
     transform: translate(-50%, -50%);
 
     &.active {
@@ -187,113 +182,113 @@ body {
     }
 
     &#ram-db-button {
-        left: 23.5vw;
-        top: 86vh;
+        left: 23.5dvw;
+        top: 86dvh;
     }
 
     &#db-ram-button {
-        left: 17vw;
-        top: 86vh;
+        left: 17dvw;
+        top: 86dvh;
     }
 
     &#db-acc-button {
-        left: 80.5vw;
-        top: 63vh;
+        left: 80.5dvw;
+        top: 63dvh;
     }
 
     &#acc-db-button {
-        left: 91.5vw;
-        top: 63vh;
+        left: 91.5dvw;
+        top: 63dvh;
     }
 
     &#acc-add-button {
-        left: 80.5vw;
-        top: 66vh;
+        left: 80.5dvw;
+        top: 66dvh;
     }
 
     &#acc-sub-button {
-        left: 80.5vw;
-        top: 69vh;
+        left: 80.5dvw;
+        top: 69dvh;
     }
 
     &#acc-inc-button {
-        left: 90.5vw;
-        top: 27vh;
+        left: 90.5dvw;
+        top: 27dvh;
     }
 
     &#acc-dec-button {
-        left: 90.5vw;
-        top: 30vh;
+        left: 90.5dvw;
+        top: 30dvh;
     }
 
     &#acc-null-button {
-        left: 90.5vw;
-        top: 33vh;
+        left: 90.5dvw;
+        top: 33dvh;
     }
 
     &#db-ins-button {
-        left: 39vw;
-        top: 60vh;
+        left: 39dvw;
+        top: 60dvh;
     }
 
     &#ins-pc-button {
-        left: 58vw;
-        top: 39.8vh;
+        left: 58dvw;
+        top: 39.8dvh;
     }
 
     &#ins-ab-button {
-        left: 51.7vw;
-        top: 27vh;
+        left: 51.7dvw;
+        top: 27dvh;
     }
 
     &#ins-mc-button {
-        left: 46.7vw;
-        top: 49vh;
+        left: 46.7dvw;
+        top: 49dvh;
     }
 
     &#pc-ab-button {
-        left: 67.8vw;
-        top: 27vh;
+        left: 67.8dvw;
+        top: 27dvh;
     }
 
     &#pc-inc-button {
-        left: 68vw;
-        top: 46vh;
+        left: 68dvw;
+        top: 46dvh;
     }
 
     &#pc-inc-null-button {
-        left: 68vw;
-        top: 49vh;
+        left: 68dvw;
+        top: 49dvh;
     }
 
     &#mc-null-button {
-        left: 63.5vw;
-        top: 80vh;
+        left: 63.5dvw;
+        top: 80dvh;
     }
 
     &#mc-stop-button {
-        left: 63.5vw;
-        top: 83vh;
+        left: 63.5dvw;
+        top: 83dvh;
     }
 
     &#add-row-above-button {
-        left: 10vw;
-        top: 80vh;
+        left: 10dvw;
+        top: 80dvh;
     }
 
     &#delete-row-button {
-        left: 10vw;
-        top: 83vh;
+        left: 10dvw;
+        top: 83dvh;
     }
 }
 
 // ----- ram input positions -----
 .ram-input {
     position: fixed;
-    left: 0.5vw;
-    top: 45vh;
-    width: 8vw;
-    height: 18vh;
+    left: 0.5dvw;
+    top: 45dvh;
+    width: 8dvw;
+    height: 18dvh;
     background-image: url("../img/ram-input.png");
     background-size: 100% 100%;
 
@@ -302,9 +297,9 @@ body {
     justify-content: center;
 
     * {
-        width: 5vw;
-        height: 2.5vh;
-        margin-left: 0.3vw;
+        width: 5dvw;
+        height: 2.5dvh;
+        margin-left: 0.3dvw;
         margin-top: 0.2rem;
         padding: 0;
     }
@@ -340,19 +335,19 @@ table {
 
 #ram-table-container {
     position: fixed;
-    left: 9vw;
-    top: 26vh;
-    height: 50vh;
-    width: 23vw;
+    left: 9dvw;
+    top: 26dvh;
+    height: 50dvh;
+    width: 23dvw;
     overflow-y: auto;
 }
 
 #microcode-table-container {
     position: fixed;
-    left: 45vw;
-    top: 58.7vh;
-    height: 28vh;
-    width: 15vw;
+    left: 45dvw;
+    top: 58.7dvh;
+    height: 28dvh;
+    width: 15dvw;
     overflow-y: auto;
 }
 
@@ -382,8 +377,8 @@ table {
         padding: 20px;
         border: 1px solid #888;
         border-radius: 2px;
-        width: min(60%, 1200px);
-        max-height: 80vh;
+        width: min(60dvw, 1200px);
+        max-height: 80dvh;
         overflow-y: auto;
         text-align: center;
         position: relative;
